secured SMTP credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ server.servlet.session.persistent=false
 # --- Email Configuration ---
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=programmerjihad@gmail.com
-spring.mail.password=mwyhthsekdwvzaqr
+spring.mail.username=yourmail@gmail.com
+spring.mail.password=your secret code --------
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -41,4 +41,4 @@ app.name=Sal-Pay
 app.team=Axiom Devs
 app.version=1.0.0
 app.support.email=support@axiomdevs.com
-app.support.phone=+8801868002915
+app.support.phone=+8801234567899
